--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Public Sans", -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
 }
 
 a {
@@ -20,7 +21,95 @@ a {
   /* background-color: ; */
 }
 
-::-webkit-scrollbar-thumb{
-  background: #0e0e0e62;
+::-webkit-scrollbar-thumb {
+  background: #0a080862;
+}
 
+.ql-container {
+  border-bottom-left-radius: 0.5em;
+  border-bottom-right-radius: 0.5em;
+  font-family: Helvetica, Arial, sans-serif;
+
+  border: none;
+  width: 100%;
+}
+
+.ql-container.ql-snow {
+  border-color: transparent;
+  line-height: 1.5;
+  font-size: 1rem;
+  font-family: "Public Sans", sans-serif;
+  font-weight: 400;
+}
+
+/* Snow Theme */
+.ql-toolbar.ql-snow {
+  display: block;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-image: initial;
+  border-bottom: 1px solid rgba(145, 158, 171, 0.32);
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
+.ql-container.ql-snow {
+  font-size: 1rem;
+  font-family: "Public Sans", sans-serif;
+  font-weight: 400;
+}
+
+.ql-editor {
+  min-height: 200px;
+  max-height: 640px;
+  outline: none;
+  font-size: 1rem;
+  font-family: "Public Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal !important;
+}
+.ql-editor.ql-blank::before {
+  font-style: normal;
+  color: rgb(145, 158, 171);
+}
+
+.ql-toolbar.ql-snow .ql-expanded .ql-picker-options {
+  padding: 8px 8px;
+  margin-top: 4px;
+  border: none;
+  max-height: 200px;
+  overflow: auto;
+  box-shadow: rgb(145 158 171 / 16%) 0px 20px 40px -4px;
+  border-radius: 8px;
+  background-color: rgb(255, 255, 255);
+}
+
+.ql-toolbar.ql-snow .ql-expanded .ql-picker-options::-webkit-scrollbar-track {
+  max-width: 10px !important;
+}
+
+.ql-snow .ql-picker {
+  color: #444;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 500;
+  height: 24px;
+  position: relative;
+  vertical-align: middle;
+}
+
+.ql-toolbar.ql-snow .ql-picker.ql-expanded .ql-picker-label {
+  border-radius: 4px;
+  border: none;
+  color: rgb(145, 158, 171);
+  background-color: rgba(145, 158, 171, 0.24);
+  border-color: transparent !important;
+}
+
+.quill {
+  border: 1px solid rgba(145, 158, 171, 0.32);
+  border-radius: 5px;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
