--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,16 +18,24 @@ a {
 
 ::-webkit-scrollbar {
   max-width: 0.3rem;
-
-  /* background-color: ; */
+  width: 0.3rem;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 14px 14px transparent;
+  border: solid 4px transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #0a080862;
+  background: #bbbbbe;
   border-radius: 100px;
+  border: solid 4px transparent;
 }
 
-.ql-container {
+/* set button(top and bottom of the scrollbar) */
+::-webkit-scrollbar-button {
+  display: none;
+}
+*/ .ql-container {
   border-bottom-left-radius: 0.5em;
   border-bottom-right-radius: 0.5em;
   font-family: Helvetica, Arial, sans-serif;
