--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@ body {
   font-family: "Public Sans", -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
     sans-serif;
+
 }
 
 a {
@@ -130,4 +131,20 @@ a {
 
 .mb-0 {
   margin-bottom: 0 !important;
+}
+
+
+.base_overlay{
+    top: 0px;
+    left: 0px;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform: scaleX(-1);
+    /* background-color: #444; */
+    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)) center center / cover no-repeat, url(/img/bg_overlay.jpg) !important;
+    background-repeat: no-repeat;
+    background-position: center center;
+
 }
